--- a/redis_cashing/package.json
+++ b/redis_cashing/package.json
@@ -16,9 +16,10 @@
     "express-session": "^1.17.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
-    "mysql2": "^2.1.0",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.9",
     "nunjucks": "^3.2.0",
-    "redis": "^3.0.2",
+    "redis": "^3.1.2",
     "sequelize": "^4.42.0"
   }
 }
